; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/test/expected/extr_compat_informix-rfmtlong.c_fmtlong.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/test/expected/extr_compat_informix-rfmtlong.c_fmtlong.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fmtlong.i = internal global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"r: %d \00", align 1
@.str.1 = private unnamed_addr constant [22 x i8] c"%d: %s (fmt was: %s)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i8*)* @fmtlong to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fmtlong(i64 %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca [30 x i8], align 16
  store i64 %0, i64* %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i64, i64* %3, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = getelementptr inbounds [30 x i8], [30 x i8]* %6, i64 0, i64 0
  %10 = call i32 @rfmtlong(i64 %7, i8* %8, i8* %9)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call i32 (i8*, i32, ...) @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %11)
  %13 = load i32, i32* %5, align 4
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %2
  %16 = load i32, i32* @fmtlong.i, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* @fmtlong.i, align 4
  %18 = getelementptr inbounds [30 x i8], [30 x i8]* %6, i64 0, i64 0
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 (i8*, i32, ...) @printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), i32 %16, i8* %18, i8* %19)
  br label %24

21:                                               ; preds = %2
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @check_return(i32 %22)
  br label %24

24:                                               ; preds = %21, %15
  ret void
}

declare dso_local i32 @rfmtlong(i64, i8*, i8*) #1

declare dso_local i32 @printf(i8*, i32, ...) #1

declare dso_local i32 @check_return(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
